--- a/web-content/src/index.html
+++ b/web-content/src/index.html
@@ -14,5 +14,8 @@
 <div class="boxed-content">
     <angular-application>Loading...</angular-application>
 </div>
+<a href="http://acari.io" target="_blank">
+    <img src="/${require('./app/images/reach.png')}">
+</a>
 </body>
 </html>
